--- a/front-end/index.html
+++ b/front-end/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark" >
   <head>
     <meta charset="UTF-8">
     <link rel="icon" href="/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <title>上校布洛托博弈猜豆子游戏</title>
   </head>
   <body>
     <div id="app"></div>
